Refactor hero section and add size selection buttons
Updated hero section styles and layout, added size buttons for product selection.

--- a/index.html
+++ b/index.html
@@ -44,6 +44,23 @@
   background: linear-gradient(to bottom, rgba(255,255,255,0), rgba(0,0,0,1));
   z-index: 5;
 }
+.hero-text-glow {
+  text-shadow:
+    0 0 8px rgba(255,255,255,0.35),
+    0 0 18px rgba(255,255,255,0.25),
+    0 0 32px rgba(255,255,255,0.15);
+}
+
+@media (prefers-reduced-motion: no-preference) {
+  .hero-text-glow {
+    animation: textGlowPulse 5s ease-in-out infinite;
+  }
+}
+
+@keyframes textGlowPulse {
+  0%,100% { text-shadow: 0 0 6px rgba(255,255,255,0.3), 0 0 14px rgba(255,255,255,0.2); }
+  50% { text-shadow: 0 0 10px rgba(255,255,255,0.45), 0 0 28px rgba(255,255,255,0.3); }
+}
 </style>
 </head>
 <body class="bg-black text-stone-200 antialiased">
@@ -59,15 +76,13 @@
   </nav>
 
   <!-- Hero -->
-  <section class="min-h-screen flex items-center justify-center text-center px-6 pt-24 relative overflow-hidden bg-white hero-glow">
-    <!-- Glow -->
-    <div class="absolute inset-0 bg-[radial-gradient(circle_at_center,rgba(255,255,255,0.9)_0%,rgba(255,255,255,0.6)_35%,rgba(255,255,255,0.2)_55%,rgba(0,0,0,0)_70%)]"></div>
-    <div class="relative z-10 text-black">
+  <section class="min-h-screen flex items-center justify-center text-center px-6 pt-24 relative overflow-hidden bg-black">
+    <div class="relative z-10 text-stone-100">
       <p class="mb-6 text-xs tracking-[0.4em] uppercase text-stone-500">Established Silence</p>
-      <h1 class="text-5xl md:text-[6rem] font-light tracking-[0.35em] leading-none">
+      <h1 class="text-5xl md:text-[6rem] font-light tracking-[0.35em] leading-none hero-text-glow">
         RO<span class="text-red-600 font-extralight">IS</span>
       </h1>
-      <p class="mt-8 text-lg text-stone-600 max-w-xl mx-auto">
+      <p class="mt-8 text-lg text-stone-400 max-w-xl mx-auto">
         Modern uniforms shaped by restraint, intention, and quiet rebellion.
       </p>
       <a href="#collection" class="inline-block mt-14 px-14 py-5 border border-stone-400 text-xs tracking-[0.4em] uppercase hover:border-red-600 hover:text-red-600 transition">
@@ -216,17 +231,14 @@
           <span class="absolute top-4 left-4 text-[10px] tracking-widest border border-red-600 text-red-600 px-3 py-1">NEW</span>
           <img src="https://i.imgur.com/njXK0t2.jpeg" alt="ROIS Foundation University Hoodie</p>
         <p class="text-xs mt-1">$1
-        <div class="relative h-[520px] bg-black mb-6 flex items-center justify-center overflow-hidden">
-  <span class="absolute top-4 left-4 text-[10px] tracking-widest border border-red-600 text-red-600 px-3 py-1">
-    NEW
-  </span>
-  <img
-    src="https://i.imgur.com/njXK0t2.jpeg"
-    alt="ROIS Foundation University Hoodie"
-    class="max-w-full max-h-full object-contain"
-  />
+        <div class="flex gap-2 mt-3">
+  <button class="w-8 h-8 rounded-full border border-red-600 text-red-600 text-[10px] tracking-widest hover:bg-red-600 hover:text-black transition">S</button>
+  <button class="w-8 h-8 rounded-full border border-red-600 text-red-600 text-[10px] tracking-widest hover:bg-red-600 hover:text-black transition">M</button>
+  <button class="w-8 h-8 rounded-full border border-red-600 text-red-600 text-[10px] tracking-widest hover:bg-red-600 hover:text-black transition">L</button>
+  <button class="w-8 h-8 rounded-full border border-red-600 text-red-600 text-[10px] tracking-widest hover:bg-red-600 hover:text-black transition">XL</button>
+  <button class="w-8 h-8 rounded-full border border-red-600 text-red-600 text-[10px] tracking-widest hover:bg-red-600 hover:text-black transition">2X</button>
+  <button class="w-8 h-8 rounded-full border border-red-600 text-red-600 text-[10px] tracking-widest hover:bg-red-600 hover:text-black transition">3X</button>
 </div>
-
         <p class="text-xs text-stone-500 mt-2">Stone · Olive · Navy</p>
         <div class="flex gap-2 mt-3">
           <span class="w-3 h-3 rounded-full bg-stone-300"></span>
