--- a/index.html
+++ b/index.html
@@ -199,27 +199,30 @@
 
       <!-- Hoodie 01 -->
       <div class="group">
-        <div class="relative h-[420px] bg-black mb-6 flex items-center justify-center overflow-hidden">
+        <div class="relative h-[520px] bg-black mb-6 flex items-center justify-center overflow-hidden">
           <span class="absolute top-4 left-4 text-[10px] tracking-widest border border-red-600 text-red-600 px-3 py-1">NEW</span>
-          <img src="https://i.imgur.com/njXK0t2.jpeg" alt="ROIS Foundation University Hoodie</p>
-        <p class="text-xs mt-1">$1
+          <img src="https://i.imgur.com/njXK0t2.jpeg" alt="ROIS Foundation University Hoodie" class="max-w-full max-h-full object-contain transition-transform duration-500 group-hover:scale-105" />
+        </div>
+        <p class="text-sm tracking-wide">Foundation University Hoodie</p>
+        <p class="text-xs mt-1">$60 USD</p>
         <div class="flex gap-2 mt-3">
-  <button class="w-8 h-8 rounded-full border border-red-600 text-red-600 text-[10px] tracking-widest hover:bg-red-600 hover:text-black transition">S</button>
-  <button class="w-8 h-8 rounded-full border border-red-600 text-red-600 text-[10px] tracking-widest hover:bg-red-600 hover:text-black transition">M</button>
-  <button class="w-8 h-8 rounded-full border border-red-600 text-red-600 text-[10px] tracking-widest hover:bg-red-600 hover:text-black transition">L</button>
-  <button class="w-8 h-8 rounded-full border border-red-600 text-red-600 text-[10px] tracking-widest hover:bg-red-600 hover:text-black transition">XL</button>
-  <button class="w-8 h-8 rounded-full border border-red-600 text-red-600 text-[10px] tracking-widest hover:bg-red-600 hover:text-black transition">2X</button>
-  <button class="w-8 h-8 rounded-full border border-red-600 text-red-600 text-[10px] tracking-widest hover:bg-red-600 hover:text-black transition">3X</button>
-</div>
-        <p class="text-xs text-stone-500 mt-2">Stone · Olive · Navy</p>
+          <button class="w-8 h-8 rounded-full border border-red-600 text-red-600 text-[10px] tracking-widest hover:bg-red-600 hover:text-black transition">S</button>
+          <button class="w-8 h-8 rounded-full border border-red-600 text-red-600 text-[10px] tracking-widest hover:bg-red-600 hover:text-black transition">M</button>
+          <button class="w-8 h-8 rounded-full border border-red-600 text-red-600 text-[10px] tracking-widest hover:bg-red-600 hover:text-black transition">L</button>
+          <button class="w-8 h-8 rounded-full border border-red-600 text-red-600 text-[10px] tracking-widest hover:bg-red-600 hover:text-black transition">XL</button>
+          <button class="w-8 h-8 rounded-full border border-red-600 text-red-600 text-[10px] tracking-widest hover:bg-red-600 hover:text-black transition">2X</button>
+          <button class="w-8 h-8 rounded-full border border-red-600 text-red-600 text-[10px] tracking-widest hover:bg-red-600 hover:text-black transition">3X</button>
+        </div>
+        <p class="text-xs text-stone-500 mt-2">Stone · Olive · Navy · Brown (Limited)</p>
         <div class="flex gap-2 mt-3">
-          <span class="w-3 h-3 rounded-full bg-stone-300"></span>
-          <span class="w-3 h-3 rounded-full bg-olive-700"></span>
-          <span class="w-3 h-3 rounded-full bg-slate-700"></span>
+          <span class="w-3 h-3 rounded-full bg-stone-300" title="Stone"></span>
+          <span class="w-3 h-3 rounded-full bg-olive-700" title="Olive"></span>
+          <span class="w-3 h-3 rounded-full bg-slate-700" title="Navy"></span>
+          <span class="relative w-3 h-3 rounded-full bg-amber-900" title="Brown">
+            <span class="absolute -top-4 -left-2 text-[8px] tracking-widest text-red-600">LIMITED</span>
+          </span>
         </div>
       </div>
-
-      
 
     </div>
   </section>
