--- a/index.html
+++ b/index.html
@@ -85,15 +85,15 @@
           <img src="https://i.imgur.com/UqjFMfN.jpeg" alt="ROIS Foundation Tee" class="w-full h-full object-contain transition-transform duration-500 group-hover:scale-105" />
         </div>
         <p class="text-sm tracking-wide">Foundation//000 Tee</p>
-        <p class="text-xs mt-1">$1
+        <p class="text-xs mt-1">$25 USD</p>
         <div class="flex gap-2 mt-3">
-  <button class="w-8 h-8 rounded-full border border-red-600 text-red-600 text-[10px] tracking-widest hover:bg-red-600 hover:text-black transition">S</button>
-  <button class="w-8 h-8 rounded-full border border-red-600 text-red-600 text-[10px] tracking-widest hover:bg-red-600 hover:text-black transition">M</button>
-  <button class="w-8 h-8 rounded-full border border-red-600 text-red-600 text-[10px] tracking-widest hover:bg-red-600 hover:text-black transition">L</button>
-  <button class="w-8 h-8 rounded-full border border-red-600 text-red-600 text-[10px] tracking-widest hover:bg-red-600 hover:text-black transition">XL</button>
-  <button class="w-8 h-8 rounded-full border border-red-600 text-red-600 text-[10px] tracking-widest hover:bg-red-600 hover:text-black transition">2X</button>
-  <button class="w-8 h-8 rounded-full border border-red-600 text-red-600 text-[10px] tracking-widest hover:bg-red-600 hover:text-black transition">3X</button>
-</div>
+          <button class="w-8 h-8 rounded-full border border-red-600 text-red-600 text-[10px] tracking-widest hover:bg-red-600 hover:text-black transition">S</button>
+          <button class="w-8 h-8 rounded-full border border-red-600 text-red-600 text-[10px] tracking-widest hover:bg-red-600 hover:text-black transition">M</button>
+          <button class="w-8 h-8 rounded-full border border-red-600 text-red-600 text-[10px] tracking-widest hover:bg-red-600 hover:text-black transition">L</button>
+          <button class="w-8 h-8 rounded-full border border-red-600 text-red-600 text-[10px] tracking-widest hover:bg-red-600 hover:text-black transition">XL</button>
+          <button class="w-8 h-8 rounded-full border border-red-600 text-red-600 text-[10px] tracking-widest hover:bg-red-600 hover:text-black transition">2X</button>
+          <button class="w-8 h-8 rounded-full border border-red-600 text-red-600 text-[10px] tracking-widest hover:bg-red-600 hover:text-black transition">3X</button>
+        </div>
         <p class="text-xs text-stone-500 mt-2">Left chest print · white ink</p>
         <div class="flex gap-2 mt-3 items-center">
           <span class="w-3 h-3 rounded-full bg-stone-300" title="Stone"></span>
@@ -105,22 +105,27 @@
         </div>
       </div>
 
-      <!-- Void//001 Tee</p>
-        <p class="text-xs mt-1">$1
+      <!-- Void//001 Tee -->
+      <div class="group">
+        <div class="relative h-[420px] bg-black mb-6 flex items-center justify-center overflow-hidden">
+          <img src="https://i.imgur.com/V0u0jqM.jpeg" alt="ROIS Void//001 Tee" class="w-full h-full object-contain transition-transform duration-500 group-hover:scale-105" />
+        </div>
+        <p class="text-sm tracking-wide">Void//001 Tee</p>
+        <p class="text-xs mt-1">$45 USD</p>
         <div class="flex gap-2 mt-3">
-  <button class="w-8 h-8 rounded-full border border-red-600 text-red-600 text-[10px] tracking-widest hover:bg-red-600 hover:text-black transition">S</button>
-  <button class="w-8 h-8 rounded-full border border-red-600 text-red-600 text-[10px] tracking-widest hover:bg-red-600 hover:text-black transition">M</button>
-  <button class="w-8 h-8 rounded-full border border-red-600 text-red-600 text-[10px] tracking-widest hover:bg-red-600 hover:text-black transition">L</button>
-  <button class="w-8 h-8 rounded-full border border-red-600 text-red-600 text-[10px] tracking-widest hover:bg-red-600 hover:text-black transition">XL</button>
-  <button class="w-8 h-8 rounded-full border border-red-600 text-red-600 text-[10px] tracking-widest hover:bg-red-600 hover:text-black transition">2X</button>
-  <button class="w-8 h-8 rounded-full border border-red-600 text-red-600 text-[10px] tracking-widest hover:bg-red-600 hover:text-black transition">3X</button>
-</div>
+          <button class="w-8 h-8 rounded-full border border-red-600 text-red-600 text-[10px] tracking-widest hover:bg-red-600 hover:text-black transition">S</button>
+          <button class="w-8 h-8 rounded-full border border-red-600 text-red-600 text-[10px] tracking-widest hover:bg-red-600 hover:text-black transition">M</button>
+          <button class="w-8 h-8 rounded-full border border-red-600 text-red-600 text-[10px] tracking-widest hover:bg-red-600 hover:text-black transition">L</button>
+          <button class="w-8 h-8 rounded-full border border-red-600 text-red-600 text-[10px] tracking-widest hover:bg-red-600 hover:text-black transition">XL</button>
+          <button class="w-8 h-8 rounded-full border border-red-600 text-red-600 text-[10px] tracking-widest hover:bg-red-600 hover:text-black transition">2X</button>
+          <button class="w-8 h-8 rounded-full border border-red-600 text-red-600 text-[10px] tracking-widest hover:bg-red-600 hover:text-black transition">3X</button>
+        </div>
         <p class="text-xs text-stone-500 mt-2">Back graphic · red accent</p>
         <div class="flex gap-2 mt-3">
-          <span class="w-3 h-3 rounded-full bg-black"></span>
-          <span class="w-3 h-3 rounded-full bg-white border border-stone-400"></span>
-          <span class="w-3 h-3 rounded-full bg-slate-700"></span>
-          <span class="w-3 h-3 rounded-full bg-olive-700"></span>
+          <span class="w-3 h-3 rounded-full bg-black" title="Black"></span>
+          <span class="w-3 h-3 rounded-full bg-white border border-stone-400" title="White"></span>
+          <span class="w-3 h-3 rounded-full bg-slate-700" title="Navy"></span>
+          <span class="w-3 h-3 rounded-full bg-olive-700" title="Olive"></span>
         </div>
       </div>
 
@@ -173,14 +178,19 @@
     </div>
     <div id="beanies" class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-12 md:gap-16 mb-32 md:block hidden">
 
-      <!-- Raw//002 Beanie</p>
+      <!-- Raw//002 Beanie -->
+      <div class="group">
+        <div class="relative h-[420px] bg-black mb-6 flex items-center justify-center overflow-hidden">
+          <img src="https://i.imgur.com/TdUxtqS.jpeg" alt="ROIS Raw//002 Beanie" class="w-full h-full object-contain transition-transform duration-500 group-hover:scale-105" />
+        </div>
+        <p class="text-sm tracking-wide">Raw//002 Beanie</p>
         <p class="text-xs mt-1">$20 USD</p>
         <p class="text-xs text-stone-500 mt-2">Sunflower yellow embroidery</p>
         <div class="flex gap-2 mt-3">
-          <span class="w-3 h-3 rounded-full bg-black"></span>
-          <span class="w-3 h-3 rounded-full bg-white border border-stone-400"></span>
-          <span class="w-3 h-3 rounded-full bg-slate-700"></span>
-          <span class="w-3 h-3 rounded-full bg-olive-700"></span>
+          <span class="w-3 h-3 rounded-full bg-black" title="Black"></span>
+          <span class="w-3 h-3 rounded-full bg-red-700" title="Red"></span>
+          <span class="w-3 h-3 rounded-full bg-olive-700" title="Olive"></span>
+          <span class="w-3 h-3 rounded-full bg-stone-300" title="Stone"></span>
         </div>
       </div>
 
