Update price from $1 to $45 USD

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
           <span class="text-xs tracking-widest text-stone-500">Coming Soon</span>
         </div>
         <p class="text-sm tracking-wide">Utility Short//010</p>
-        <p class="text-xs mt-1">$1
+        <p class="text-xs mt-1">$45 USD</p>
         <div class="flex gap-2 mt-3">
   <button class="w-8 h-8 rounded-full border border-red-600 text-red-600 text-[10px] tracking-widest hover:bg-red-600 hover:text-black transition">S</button>
   <button class="w-8 h-8 rounded-full border border-red-600 text-red-600 text-[10px] tracking-widest hover:bg-red-600 hover:text-black transition">M</button>
