Update hero section text from 'Established Silence' to 'The Collective'

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
   <!-- Hero -->
   <section class="min-h-screen flex items-center justify-center text-center px-6 pt-24 relative overflow-hidden bg-black">
     <div class="relative z-10 text-stone-100">
-      <p class="mb-6 text-xs tracking-[0.4em] uppercase text-stone-500">Established Silence</p>
+      <p class="mb-6 text-xs tracking-[0.4em] uppercase text-stone-500">The Collective</p>
       <h1 class="text-5xl md:text-[6rem] font-light tracking-[0.35em] leading-none hero-text-glow">
         RO<span class="text-red-600 font-extralight">IS</span>
       </h1>
